--- a/src/globals.css
+++ b/src/globals.css
@@ -1,2 +1,42 @@
 @import 'tailwindcss';
-@import './theme/theme.css';
+@import './theme/fonts.css';
+
+/* ****************************
+* THEME
+**************************** */
+@theme {
+  --spacing: 4px;
+}
+
+/* ****************************
+* BASE LAYER
+**************************** */
+@layer base {
+  * {
+    @apply text-white;
+    font-family: "Raleway", "sans-serif";
+  }
+
+  h1 {
+    @apply text-6xl font-medium leading-20;
+  }
+  h2 {
+    @apply text-5xl font-medium;
+  }
+  h3 {
+    @apply text-3xl font-medium;
+  }
+  h4 {
+    @apply text-2xl font-medium;
+  }
+  h5 {
+    @apply text-xl font-semibold;
+  }
+  h6 {
+    @apply text-lg font-semibold;
+  }
+  p {
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
